# PyDeck

./: README.md  __about__.py  pyproject.toml
pydeck/: pyproject.toml
pydeck/src/: __init__.py
pydeck/src/examples/: __init__.py  blackjack.py
pydeck/src/pydeck_randyiscoding/: __init__.py  card.py  deck_of_cards.py  properties.py
