[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydeck"
dynamic = ["version"]
description = 'Creates a 52 Card Deck (No Jokers or other extra cards)'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["deck of cards", "BlackJack"]
authors = [
  { name = "Randyiscoding", email = "reaston@my365.bellevue.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Randyiscoding/pydeck#readme"
Issues = "https://github.com/Randyiscoding/pydeck/issues"
Source = "https://github.com/Randyiscoding/pydeck"

[tool.hatch.version]
path = "src/pydeck_randyiscoding/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydeck tests}"

[tool.coverage.run]
source_pkgs = ["pydeck", "tests"]
branch = true
parallel = true
omit = [
  "src/pydeck_randyiscoding/__about__.py",
]

[tool.coverage.paths]
pydeck = ["src/pydeck", "*/pydeck/src/pydeck_randyiscoding"]
tests = ["tests", "*/pydeck/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
