[project]
name = "pydeck_randyiscoding"
version = "0.0.1"
authors = [
  { name="Randy Easton", email="reaston@my365.bellevue.edu" },
]
description = "Creates a 52 Card Deck (No Jokers or other extra cards)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"